--- a/mainsite/templates/mainsite_new/base.html
+++ b/mainsite/templates/mainsite_new/base.html
@@ -105,13 +105,6 @@
                             <a href="{% url 'mainsite_products' %}" class="nav-item nav-link active">Главная</a>
                             <a href="{% url 'mainsite_catalog' %}" class="nav-item nav-link">Каталог</a>
                             <a href="#" class="nav-item nav-link">Страница товара/тест</a>
-                            <div class="nav-item dropdown">
-                                <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Pages <i class="fa fa-angle-down mt-1"></i></a>
-                                <div class="dropdown-menu bg-primary rounded-0 border-0 m-0">
-                                    <a href="cart.html" class="dropdown-item">Shopping Cart</a>
-                                    <a href="checkout.html" class="dropdown-item">Checkout</a>
-                                </div>
-                            </div>
                             <a href="{% url 'mainsite_contact' %}" class="nav-item nav-link">Контакты</a>
                         </div>
                         <div class="navbar-nav ml-auto py-0 d-none d-lg-block">
@@ -134,8 +127,6 @@
     {% block main_new %}
 
     {% endblock %}
-
-
 
     <!-- Footer Start -->
     <div class="container-fluid bg-dark text-secondary mt-5 pt-5">
@@ -174,10 +165,9 @@
                         <h5 class="text-secondary text-uppercase mb-4">Разделы сайта</h5>
                         <div class="d-flex flex-column justify-content-start">
                             <a class="text-secondary mb-2" href="{% url 'mainsite_products' %}"><i class="fa fa-angle-right mr-2"></i>Главная</a>
-                            <a class="text-secondary mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Our Shop</a>
-                            <a class="text-secondary mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Shop Detail</a>
-                            <a class="text-secondary mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Shopping Cart</a>
-                            <a class="text-secondary mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Checkout</a>
+                            <a class="text-secondary mb-2" href="{% url 'mainsite_catalog' %}"><i class="fa fa-angle-right mr-2"></i>Каталог</a>
+                            <a class="text-secondary" href="{% url 'mainsite_about' %}"><i class="fa fa-angle-right mr-2"></i>О нас</a>
+                            <a class="text-secondary" href="{% url 'profile' %}"><i class="fa fa-angle-right mr-2"></i>Личный кабинет</a>
                             <a class="text-secondary" href="{% url 'mainsite_contact' %}"><i class="fa fa-angle-right mr-2"></i>Свяжитесь с нами</a>
                         </div>
                     </div>
@@ -195,7 +185,6 @@
         </div>
     </div>
     <!-- Footer End -->
-
 
     <!-- Back to Top -->
     <a href="#" class="btn btn-primary back-to-top"><i class="fa fa-angle-double-up"></i></a>
