--- a/mainsite/templates/mainsite_new/index.html
+++ b/mainsite/templates/mainsite_new/index.html
@@ -12,38 +12,38 @@
         <div class="col-lg-8">
             <div id="header-carousel" class="carousel slide carousel-fade mb-30 mb-lg-0" data-ride="carousel">
                 <ol class="carousel-indicators">
-                    <li data-target="#header-carousel" data-slide-to="0" class="active"></li>
-                    <li data-target="#header-carousel" data-slide-to="1"></li>
+                    <li data-target="#header-carousel" data-slide-to="0"></li>
+                    <li data-target="#header-carousel" data-slide-to="1" class="active"></li>
                     <li data-target="#header-carousel" data-slide-to="2"></li>
                 </ol>
                 <div class="carousel-inner">
                     <div class="carousel-item position-relative active" style="height: 430px;">
-                        <img class="position-absolute w-100 h-100" src="{% static 'img/carousel-1.jpg' %}" style="object-fit: cover;">
+                        <img class="position-absolute w-100 h-100" src="{% static 'img/carusel1.jpg' %}" style="object-fit: cover;">
                         <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                             <div class="p-3" style="max-width: 700px;">
-                                <h1 class="display-4 text-white mb-3 animate__animated animate__fadeInDown">Men Fashion</h1>
-                                <p class="mx-md-5 px-5 animate__animated animate__bounceIn">Lorem rebum magna amet lorem magna erat diam stet. Sadips duo stet amet amet ndiam elitr ipsum diam</p>
-                                <a class="btn btn-outline-light py-2 px-4 mt-3 animate__animated animate__fadeInUp" href="#">Shop Now</a>
+                                <h1 class="display-4 text-white mb-3 animate__animated animate__fadeInDown">Изделия на складе и под заказ</h1>
+                                <p class="mx-md-5 px-5 animate__animated animate__bounceIn">Изделия ручной работы. Сделано с душой.</p>
+                                <a class="btn btn-outline-light py-2 px-4 mt-3 animate__animated animate__fadeInUp" href="#">Посетить каталог</a>
                             </div>
                         </div>
                     </div>
                     <div class="carousel-item position-relative" style="height: 430px;">
-                        <img class="position-absolute w-100 h-100" src="{% static 'img/carousel-2.jpg' %}" style="object-fit: cover;">
+                        <img class="position-absolute w-100 h-100" src="{% static 'img/carusel2.jpg' %}" style="object-fit: cover;">
                         <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                             <div class="p-3" style="max-width: 700px;">
-                                <h1 class="display-4 text-white mb-3 animate__animated animate__fadeInDown">Women Fashion</h1>
-                                <p class="mx-md-5 px-5 animate__animated animate__bounceIn">Lorem rebum magna amet lorem magna erat diam stet. Sadips duo stet amet amet ndiam elitr ipsum diam</p>
-                                <a class="btn btn-outline-light py-2 px-4 mt-3 animate__animated animate__fadeInUp" href="#">Shop Now</a>
+                                <h1 class="display-4 text-white mb-3 animate__animated animate__fadeInDown">Изделия на складе и под заказ</h1>
+                                <p class="mx-md-5 px-5 animate__animated animate__bounceIn">Изделия ручной работы. Сделано с душой.</p>
+                                <a class="btn btn-outline-light py-2 px-4 mt-3 animate__animated animate__fadeInUp" href="#">Посетить каталог</a>
                             </div>
                         </div>
                     </div>
                     <div class="carousel-item position-relative" style="height: 430px;">
-                        <img class="position-absolute w-100 h-100" src="{% static 'img/carousel-3.jpg' %}" style="object-fit: cover;">
+                        <img class="position-absolute w-100 h-100" src="{% static 'img/carusel3.jpg' %}" style="object-fit: cover;">
                         <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                             <div class="p-3" style="max-width: 700px;">
-                                <h1 class="display-4 text-white mb-3 animate__animated animate__fadeInDown">Kids Fashion</h1>
-                                <p class="mx-md-5 px-5 animate__animated animate__bounceIn">Lorem rebum magna amet lorem magna erat diam stet. Sadips duo stet amet amet ndiam elitr ipsum diam</p>
-                                <a class="btn btn-outline-light py-2 px-4 mt-3 animate__animated animate__fadeInUp" href="#">Shop Now</a>
+                                <h1 class="display-4 text-white mb-3 animate__animated animate__fadeInDown">Изделия на складе и под заказ</h1>
+                                <p class="mx-md-5 px-5 animate__animated animate__bounceIn">Изделия на складе и под заказ</p>
+                                <a class="btn btn-outline-light py-2 px-4 mt-3 animate__animated animate__fadeInUp" href="#">Посетить каталог</a>
                             </div>
                         </div>
                     </div>
@@ -52,19 +52,19 @@
         </div>
         <div class="col-lg-4">
             <div class="product-offer mb-30" style="height: 200px;">
-                <img class="img-fluid" src="{% static 'img/offer-1.jpg' %}" alt="">
+                <img class="img-fluid" src="{% static 'img/f1.jpg' %}" alt="">
                 <div class="offer-text">
-                    <h6 class="text-white text-uppercase">Save 20%</h6>
-                    <h3 class="text-white mb-3">Special Offer</h3>
-                    <a href="" class="btn btn-primary">Shop Now</a>
+                    <h6 class="text-white text-uppercase">скидка 15 %</h6>
+                    <h4 class="text-white mb-3">Специальное предложение</h4>
+                    <a href="" class="btn btn-primary">Подробнее</a>
                 </div>
             </div>
             <div class="product-offer mb-30" style="height: 200px;">
-                <img class="img-fluid" src="{% static 'img/offer-2.jpg' %}" alt="">
+                <img class="img-fluid" src="{% static 'img/f2.jpg' %}" alt="">
                 <div class="offer-text">
-                    <h6 class="text-white text-uppercase">Save 20%</h6>
-                    <h3 class="text-white mb-3">Special Offer</h3>
-                    <a href="" class="btn btn-primary">Shop Now</a>
+                    <h6 class="text-white text-uppercase">минус 15 %</h6>
+                    <h4 class="text-white mb-3">Специальное предложение</h4>
+                    <a href="" class="btn btn-primary">Подробнее</a>
                 </div>
             </div>
         </div>
@@ -392,21 +392,21 @@
     <div class="row px-xl-5">
         <div class="col-md-6">
             <div class="product-offer mb-30" style="height: 300px;">
-                <img class="img-fluid" src="{% static 'img/offer-1.jpg' %}" alt="">
+                <img class="img-fluid" src="{% static 'img/f2.jpg' %}" alt="">
                 <div class="offer-text">
-                    <h6 class="text-white text-uppercase">Save 20%</h6>
-                    <h3 class="text-white mb-3">Special Offer</h3>
-                    <a href="" class="btn btn-primary">Shop Now</a>
+                    <h6 class="text-white text-uppercase">Минус 15%</h6>
+                    <h4 class="text-white mb-3">Специальное предложение</h4>
+                    <a href="" class="btn btn-primary">Подробнее</a>
                 </div>
             </div>
         </div>
         <div class="col-md-6">
             <div class="product-offer mb-30" style="height: 300px;">
-                <img class="img-fluid" src="{% static 'img/offer-2.jpg' %}" alt="">
+                <img class="img-fluid" src="{% static 'img/f1.jpg' %}" alt="">
                 <div class="offer-text">
-                    <h6 class="text-white text-uppercase">Save 20%</h6>
-                    <h3 class="text-white mb-3">Special Offer</h3>
-                    <a href="" class="btn btn-primary">Shop Now</a>
+                    <h6 class="text-white text-uppercase">Минус 15%</h6>
+                    <h4 class="text-white mb-3">Специальное предложение</h4>
+                    <a href="" class="btn btn-primary">Подробнее</a>
                 </div>
             </div>
         </div>
@@ -530,42 +530,6 @@
     </div>
 </div>
 <!-- Products End -->
-
-
-<!-- Vendor Start -->
-<div class="container-fluid py-5">
-    <div class="row px-xl-5">
-        <div class="col">
-            <div class="owl-carousel vendor-carousel">
-                <div class="bg-light p-4">
-                    <img src="{% static 'img/vendor-1.jpg' %}" alt="">
-                </div>
-                <div class="bg-light p-4">
-                    <img src="{% static 'img/vendor-2.jpg' %}" alt="">
-                </div>
-                <div class="bg-light p-4">
-                    <img src="{% static 'img/vendor-3.jpg' %}" alt="">
-                </div>
-                <div class="bg-light p-4">
-                    <img src="{% static 'img/vendor-4.jpg' %}" alt="">
-                </div>
-                <div class="bg-light p-4">
-                    <img src="{% static 'img/vendor-5.jpg' %}" alt="">
-                </div>
-                <div class="bg-light p-4">
-                    <img src="{% static 'img/vendor-6.jpg' %}" alt="">
-                </div>
-                <div class="bg-light p-4">
-                    <img src="{% static 'img/vendor-7.jpg' %}" alt="">
-                </div>
-                <div class="bg-light p-4">
-                    <img src="{% static 'img/vendor-8.jpg' %}" alt="">
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-<!-- Vendor End -->
 {% endblock %}
 
 
