--- a/mainsite/templates/mainsite_new/base.html
+++ b/mainsite/templates/mainsite_new/base.html
@@ -61,7 +61,7 @@
         <div class="row align-items-center bg-light py-3 px-xl-5 d-none d-lg-flex">
             <div class="col-lg-4">
                 <a href="{% url 'mainsite_products' %}" class="text-decoration-none">
-                    <span class="h1 text-uppercase text-primary bg-dark px-2">+++BOGDAN+++</span>
+                    <span class="h1 text-uppercase text-primary bg-dark px-2">BALANS</span>
                 </a>
             </div>
             <div class="col-lg-4 col-6 text-left">
